# fifa-world-cup-analytics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FCD_TP_AnaCampos_GabrielReis.ipynb  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh-data.yml
.streamlit/: config.toml
app/: api.py  streamlit_app.py
notebooks/: 01_overview.ipynb  FCD_TP_AnaCampos_GabrielReis.ipynb
notebooks/academic/: FCD_261_projeto_tp_instruções.ipynb
src/worldcup/: __init__.py  advanced_models.py  analysis.py  cli.py  config.py  data.py  elo.py  evaluation.py  external.py  features.py  models.py  records.py  simulation.py  viz.py
tests/: test_advanced.py  test_analysis_viz.py  test_external.py  test_persistence.py  test_records.py  test_simulation.py  test_worldcup.py
