[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup"
version = "0.1.0"
description = "End-to-end analytics, Elo ratings and match-prediction models for the FIFA World Cup."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ana Luiza Gonçalves Campos" },
    { name = "Gabriel Costa Reis" },
]
keywords = ["football", "soccer", "world-cup", "data-science", "elo", "poisson", "machine-learning"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.0",
    "typer>=0.9",
    "joblib>=1.3",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "fastapi>=0.110", "uvicorn>=0.27", "plotly>=5.18"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3", "genbadge[coverage]>=1.1"]

[project.scripts]
worldcup = "worldcup.cli:app"

[project.urls]
Repository = "https://github.com/gabrielreisz/fifa-world-cup-analytics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["integration: tests that require the real dataset (network)"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
